--- a/public/signup.html
+++ b/public/signup.html
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 
-			<button type="submit" class="btn btn-warning btn-lg">Signup</button>
+			<button type="submit" class="btn btn-raised btn-warning btn-lg">Signup</button>
 
 		</fieldset>
 	</form>
