--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -28,5 +28,5 @@
 </div>
 
 <div class="ngdialog-buttons">
-	<button class="btn btn-success pull-right" ng-click="reg()">Anmelden</button>
+	<button class="btn btn-raised btn-success pull-right" ng-click="reg()">Anmelden</button>
 </div>
