--- a/public/editTournament.html
+++ b/public/editTournament.html
@@ -147,7 +147,7 @@
 						</div>
 					</div>
 				</div>
-				<button type="submit" class="btn btn-lg btn-success pull-right">Submit</button>
+				<button type="submit" class="btn btn-raised btn-lg btn-success pull-right">Submit</button>
 			</form>
 
 		</div>
