--- a/public/forgot.html
+++ b/public/forgot.html
@@ -25,7 +25,7 @@
 			</div>	
 		</div>
 
-		<button type="submit" class="btn btn-warning btn-lg">Send</button>
+		<button type="submit" class="btn btn-raised btn-warning btn-lg">Send</button>
 	</form>
 
 </div>
