--- a/public/imageUpload.html
+++ b/public/imageUpload.html
@@ -16,10 +16,10 @@
 			Your profile pic will be stored on the BDU server.<br>
 			If you upload a new profile pic, your old one will be deleted from the server.
 		</p>
-		<button ng-hide="submit" class="btn btn-default" ngf-select ng-model="picFile" accept="image/*" ng-click="submit = !submit">Select Picture</button>
+		<button ng-hide="submit" class="btn btn-raised btn-default" ngf-select ng-model="picFile" accept="image/*" ng-click="submit = !submit">Select Picture</button>
 		<div ng-show="submit">
-			<a href="#/profile"><button class="btn btn-danger">Cancel</button></a>
-			<button class="btn btn-success" ng-click="upload(croppedDataUrl, picFile.name)">Submit</button>
+			<a href="#/profile"><button class="btn btn-raised btn-danger">Cancel</button></a>
+			<button class="btn btn-raised btn-success" ng-click="upload(croppedDataUrl, picFile.name)">Submit</button>
 		</div>
 		<div ngf-drop ng-model="picFile" ngf-pattern="image/*" class="cropArea">
 			<img-crop image="picFile  | ngfDataUrl" result-image="croppedDataUrl" ng-init="croppedDataUrl=''"></img-crop>
