--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 
-		<button type="submit" class="btn btn-warning btn-lg">Login</button>
+		<button type="submit" class="btn btn-raised btn-warning btn-lg">Login</button>
 	</form>
 
 	<hr>
