--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -178,7 +178,7 @@
 					</div>
 				</div>
 
-				<button type="submit" class="btn btn-lg btn-success pull-right">Turnier erstellen</button>
+				<button type="submit" class="btn btn-raised btn-lg btn-success pull-right">Turnier erstellen</button>
 			</form>
 
 		</div>
