--- a/public/profile.html
+++ b/public/profile.html
@@ -12,7 +12,7 @@
 				<div class="intro-text">
 					<span class="name">Hello {{user.vorname}}</span>
 					<hr class="star-light">
-					<span class="skills">Here you find your User Info, Tournaments and Finances</span>
+					<span class="skills">&nbsp; Here you find your User Info, Tournaments and Finances &nbsp;</span>
 				</div>
 			</div>
 		</div>
