--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -240,13 +240,13 @@
 					<div class="col-sm-3">
 						<div class="form-group">
 							<label>Preis Speaker</label>
-							<input type="number" name="speakerprice" class="form-control" ng-model="tournament.speakerprice">
+							<input type="number" step="0.01" name="speakerprice" class="form-control" ng-model="tournament.speakerprice">
 						</div>
 					</div>
 					<div class="col-sm-3">						
 						<div class="form-group">
 							<label>Preis Judge</label>
-							<input type="number" name="judgeprice" class="form-control" ng-model="tournament.judgeprice">
+							<input type="number" step="0.01" name="judgeprice" class="form-control" ng-model="tournament.judgeprice">
 						</div>
 					</div>
 					<div class="col-sm-3">						
