--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -141,13 +141,13 @@
 					<div class="col-sm-3">
 						<div class="form-group">
 							<label>Preis Speaker</label>
-							<input type="number" name="speakerprice" class="form-control" ng-model="newTournament.speakerprice">
+							<input type="number" step="0.01" name="speakerprice" class="form-control" ng-model="newTournament.speakerprice">
 						</div>
 					</div>
 					<div class="col-sm-3">						
 						<div class="form-group">
 							<label>Preis Judge</label>
-							<input type="number" name="judgeprice" class="form-control" ng-model="newTournament.judgeprice">
+							<input type="number" step="0.01" name="judgeprice" class="form-control" ng-model="newTournament.judgeprice">
 						</div>
 					</div>
 					<div class="col-sm-3">						
