--- a/public/forgot.html
+++ b/public/forgot.html
@@ -1,31 +1,33 @@
-<header>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="intro-text">
-					<span class="name"><span class="glyphicon glyphicon-heart-empty"></span> Forgot your password?</span>
-					<h4>Hope you remember your email! We'll shoot you a mail to reset your password</h4>
-					<h4>If you don't remember your email, please contact the Vorstand.</h4>
+<section>
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="intro-text">
+						<span class="name"><span class="glyphicon glyphicon-heart-empty"></span> Forgot your password?</span>
+						<h4 class="skills">Hope you remember your email! We'll shoot you a mail to reset your password</h4>
+						<h4 class="skills">If you don't remember your email, please contact the Vorstand.</h4>
+					</div>
 				</div>
 			</div>
 		</div>
+	</header>
+
+	<div class="col-sm-6 col-sm-offset-3">
+
+		<!-- RESET FORM -->
+		<form ng-submit="submit()">
+			<p ng-show="message.length > 0" class="alert alert-info">{{message}}</p>
+			<div class="form-group">
+				<label>Email</label>
+				<div class="input-group">
+					<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+					<input type="email" name="email" pattern="[^ @]*@[^ @]*" ng-model="email" placeholder="Enter your email" class="form-control" required="true">
+				</div>
+			</div>
+
+			<button type="submit" class="btn btn-raised btn-warning btn-lg">Send</button>
+		</form>
+
 	</div>
-</header>
-
-<div class="col-sm-6 col-sm-offset-3">
-
-	<!-- RESET FORM -->
-	<form ng-submit="submit()">
-		<p ng-show="message.length > 0" class="alert alert-info">{{message}}</p>
-		<div class="form-group">
-			<label>Email</label>
-			<div class="input-group">
-				<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-				<input type="email" name="email" pattern="[^ @]*@[^ @]*" ng-model="email" placeholder="Enter your email" class="form-control" required="true">
-			</div>	
-		</div>
-
-		<button type="submit" class="btn btn-raised btn-warning btn-lg">Send</button>
-	</form>
-
-</div>
+</section>
