--- a/public/forgot.html
+++ b/public/forgot.html
@@ -1,18 +1,18 @@
-<section>
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="intro-text">
-						<span class="name"><span class="glyphicon glyphicon-heart-empty"></span> Forgot your password?</span>
-						<h4 class="skills">Hope you remember your email! We'll shoot you a mail to reset your password</h4>
-						<h4 class="skills">If you don't remember your email, please contact the Vorstand.</h4>
-					</div>
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="intro-text">
+					<span class="name"><span class="glyphicon glyphicon-heart-empty"></span> Forgot your password?</span>
+					<span class="skills">&nbsp; Hope you remember your email! We'll shoot you a mail to reset your password. &nbsp; <br>
+						&nbsp; If you don't remember your email, please contact the Vorstand. &nbsp; </span>
 				</div>
 			</div>
 		</div>
-	</header>
+	</div>
+</header>
 
+<section>
 	<div class="col-sm-6 col-sm-offset-3">
 
 		<!-- RESET FORM -->
