--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -46,7 +46,7 @@
 	<!-- USER TABLE -->
 	<div id="users" class="col-md-5">
 		<h3>{{tournament.name}}</h3>
-		<table ng-show="showUsers" class="table table-hover table-responsive table-overview">
+		<table ng-show="showUsers" class="table table-hover table-overview">
 			<thead>
 				<tr>
 					<th class="hidden-xs"><button class="btn btn-raised btn-info btn-sm" ng-click="sortUsers('id')">User ID</button></th>
