improved snackbars; further ng-resource use

--- a/public/profile.html
+++ b/public/profile.html
@@ -19,7 +19,7 @@
 </header>
 
 <!-- User Info Section -->
-<section id="user-info">
+<section class="user-info">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
@@ -76,8 +76,6 @@
 						<button ng-click="updateUser()" class="btn btn-raised btn-primary" role="button">Submit</button>
 					</div>
 
-					<strong id="snackbarSuccess" class="alert alert-success">{{SuccessMessage}}</strong>
-					<strong id="snackbarError" class="alert alert-danger">{{ErrorMessage}}</strong>
 				</div>
 			</div>
 		</div>
