--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -9,7 +9,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="form-group">
-				<label>Rolle</label>
+				<label>I wanna go as</label>
 				<select name="role" class="form-control" style="height:auto;" ng-options="role as role.label for role in roles track by role.id" ng-model="selected" ng-change="setRole()"></select>
 			</div>
 		</div>
@@ -17,10 +17,10 @@
 	<div class="row" ng-show="isSpeaker">
 		<div class="col-md-12">
 			<div class="form-group">
-				<label>Teamname</label><br><p>Don't have a teampartner yet? Just leave blank.</p>
+				<label>Teamname</label><br><p>Don't have a team partner yet? Just leave blank.</p>
 				<input type="text" ng-model="team" class="form-control" name="team" list="teamnames">
 				<datalist id="teamnames">
-					<option ng-repeat="u in tournament.users" value="{{u.teamname}}"></option>
+					<option ng-repeat="u in tournament.users" value="{{u.pivot_teamname}}"></option>
 				</datalist>
 			</div>
 		</div>
