--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -11,7 +11,7 @@
 </header>
 
 <!-- NORMAL VIEW -->
-<section id="user-info" ng-hide="showUpdate">
+<section class="user-info" ng-hide="showUpdate">
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1">
 			<!-- Table -->
@@ -49,8 +49,8 @@
 			</div>
 
 			<!-- Details -->
-			<div ng-show="showDetails" id="details" class="col-md-4 wellpadding">
-				<table class="table table-hover details">
+			<div id="details" class="col-md-4 wellpadding">
+				<table ng-show="showDetails" class="table table-hover details">
 					<tr>
 						<th><h4><span class="fa fa-book"></span> Details</h4><br></th>
 						<td>
@@ -121,20 +121,17 @@
 						</td>
 					</tr>
 				</table>
-				<div class="row">
-					<div class="col-sm-12">
-						<strong ng-show="SuccessMessage.length > 0" class="alert alert-success">{{SuccessMessage}}</strong>
-						<strong ng-show="ErrorMessage.length > 0" class="alert alert-danger">{{ErrorMessage}}</strong>
-					</div>
-				</div>
 			</div>
 
 		</div>
 	</div>
 </section>
 
+
+
+
 <!-- EDIT TOURNAMENT VIEW -->
-<section id="user-info" ng-show='istVorstand && showUpdate'>
+<section class="user-info" ng-show='istVorstand && showUpdate'>
 
 	<!-- NEW TOURNAMENT -->
 	<div class="container">
