added bug report feature; improved responsiveness

--- a/public/profile.html
+++ b/public/profile.html
@@ -9,9 +9,11 @@
 					</div>
 				</div>
 				<div class="intro-text">
-					<span class="name">Hello {{user.vorname}}</span>
+					<span class="">
+						<p class="name"> Hello {{user.vorname}}</p>
+					</span>
 					<hr class="star-light">
-					<span class="skills">&nbsp; Here you find your User Info, Tournaments and Finances &nbsp;</span>
+					<span class="skills">Here you find your User Info, Tournaments and Finances</span>
 				</div>
 			</div>
 		</div>
