--- a/public/showImageDialog.html
+++ b/public/showImageDialog.html
@@ -1,12 +1,12 @@
 <nav>
     <div>
-        <h3 class="text-center"><span class="glyphicon glyphicon-picture"></span> {{imageUser.vorname}}</h3>
+        <h3 class="text-center"><span class="glyphicon glyphicon-picture"></span> {{imgDialogVorname}}</h3>
         <span flex></span>
     </div>
 </nav>
 
 <div class="col-sm-12">
-    <img style="height: 100%; width: 100%; border:4px solid gainsboro; border-radius: 0%;" class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{imageUser.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+    <img style="height: 100%; width: 100%; border:4px solid gainsboro; border-radius: 0%;" class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{imgDialogURL}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
 </div>
 
 <div class="ngdialog-buttons" style="padding-top: 10px">
