--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -15,41 +15,32 @@
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1">
 			<!-- Table -->
-			<div class="col-md-8">
-				<div class="user-info-table">
+			<div class="col-md-7">
 
-					<table class="table table-hover table-responsive">
-						<thead>
-							<tr>
-								<th class="col-md-2">Name</th>
-								<th class="col-md-2 hidden-xs">Place</th>
-								<th class="col-md-2">Date</th>
-								<th class="col-md-2 hidden-xs">Spots</th>
-								<th class="col-md-2"><button class="btn btn-raised btn-warning" ng-click="toggle()">{{toggleVal}}</button></th>
-							</tr>
-						</thead>
-						<tbody class="left-align">
-							<tr ng-repeat="t in tournaments">
-								<td>{{t.name}}</td>
-								<td class="hidden-xs">{{t.ort}}</td>
-								<td>{{t.startdate | date:'dd.MM.yyyy'}} -<br>{{t.enddate | date:'dd.MM.yyyy'}}</td>
-								<td class="hidden-xs">Teams: {{t.teamspots}}, Judges: {{t.judgespots}}</td>
-								<td>{{t.language}}</td>
-								<td>
-									<button class="btn btn-raised btn-info hidden-xs" ng-click="setTournament(t.id, false)">Details</button>
-								</td>
-								<td>
-									<button class="btn btn-raised btn-info visible-xs" ng-click="setTournament(t.id, true)">Details</button>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-
-				</div>
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th class="col-md-2">Name</th>
+							<th class="col-md-2 hidden-xs">Place</th>
+							<th class="col-md-2">Date</th>
+							<th class="col-md-2 hidden-xs">Spots</th>
+							<th class="col-md-2"><button class="btn btn-raised btn-warning" ng-click="toggle()">{{toggleVal}}</button></th>
+						</tr>
+					</thead>
+					<tbody class="left-align">
+						<tr ng-repeat="t in tournaments" ng-click="setTournament(t.id, true)">
+							<td>{{t.name}}</td>
+							<td class="hidden-xs">{{t.ort}}</td>
+							<td>{{t.startdate | date:'dd.MM.yyyy'}} -<br>{{t.enddate | date:'dd.MM.yyyy'}}</td>
+							<td class="hidden-xs">Teams: {{t.teamspots}}, Judges: {{t.judgespots}}</td>
+							<td>{{t.language}}</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 
 			<!-- Details -->
-			<div id="details" class="col-md-4 wellpadding">
+			<div id="details" class="col-md-5 wellpadding">
 				<table ng-show="showDetails" class="table table-hover details">
 					<tr>
 						<th><h4><span class="fa fa-book"></span> Details</h4><br></th>
